<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <FrameLayout
            android:id="@+id/camera_preview"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="hw,16:9"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_margin"
        android:layout_marginTop="@dimen/icon_margin"
        android:src="@drawable/ic_settings_applications"
        android:tint="@color/white"
        app:layout_constraintStart_toStartOf="@id/camera_preview"
        app:layout_constraintTop_toTopOf="@id/fl_main" />

    <Button android:text="0 km/h"
        android:id="@+id/bn_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tv_demoLabel"
        app:layout_constraintBottom_toTopOf="@id/tv_demoLabel"
        android:checked="false" />

    <ToggleButton
        android:id="@+id/tg_record"
        android:checked="false"
        android:drawableTop="@drawable/ic_record"
        android:gravity="center"
        android:textOff=""
        android:textOn=""
        android:textSize="0sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/bn_speed"
        app:layout_constraintEnd_toEndOf="@id/tv_demoLabel" />

    <TextView android:text="0 0"
        android:id="@+id/tv_vehicle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@id/fl_main"
        app:layout_constraintStart_toStartOf="@id/iv_settings"/>

    <TextView android:text="- | -"
        android:id="@+id/tv_gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/bn_speed"
        app:layout_constraintEnd_toStartOf="@id/bn_speed"/>

    <TextView android:text="@string/calibration_label"
        android:id="@+id/tv_calibrationLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_margin"
        android:layout_marginBottom="@dimen/icon_margin"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@id/iv_settings"
        app:layout_constraintBottom_toBottomOf="@id/iv_settings"/>

    <TextView android:text="@string/calibration_auto"
        android:id="@+id/tv_calibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="visible"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_calibrationLabel"
        app:layout_constraintStart_toEndOf="@id/tv_calibrationLabel"/>

    <ImageView
        android:id="@+id/iv_delete_calibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/icon_margin"
        android:layout_marginTop="@dimen/icon_margin"
        android:src="@android:drawable/btn_dialog"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@id/tv_calibration"
        app:layout_constraintTop_toTopOf="@id/fl_main" />

    <TextView android:text="@string/go"
        android:id="@+id/tv_go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/large_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        app:layout_constraintTop_toTopOf="@id/camera_preview"
        app:layout_constraintStart_toStartOf="@id/camera_preview"
        app:layout_constraintEnd_toEndOf="@id/camera_preview"/>

    <android.support.constraint.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView android:text="@string/fcw"
        android:id="@+id/tv_fcw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/medium_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tv_calibrationLabel"
        app:layout_constraintStart_toStartOf="@id/camera_preview" />

    <TextView android:text="@string/tg"
        android:id="@+id/tv_tg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/medium_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tv_calibrationLabel"
        app:layout_constraintStart_toEndOf="@id/tv_fcw" />

    <TextView android:text="@string/rs"
        android:id="@+id/tv_rs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/medium_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tv_calibrationLabel"
        app:layout_constraintStart_toEndOf="@id/tv_tg" />

    <TextView android:text="@string/slv"
        android:id="@+id/tv_slv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/medium_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tv_calibrationLabel"
        app:layout_constraintStart_toEndOf="@id/tv_rs" />

    <TextView android:text="@string/pcw"
        android:id="@+id/tv_pcw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/medium_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/tv_calibrationLabel"
        app:layout_constraintStart_toEndOf="@id/tv_slv" />

    <TextView android:text="@string/ldw_left"
        android:id="@+id/tv_ldwLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/large_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        android:layout_marginStart="@dimen/icon_margin"
        app:layout_constraintTop_toTopOf="@id/camera_preview"
        app:layout_constraintBottom_toBottomOf="@id/camera_preview"
        app:layout_constraintStart_toStartOf="@id/camera_preview" />

    <TextView android:text="@string/ldw_right"
        android:id="@+id/tv_ldwRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/large_label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="invisible"
        android:layout_marginEnd="@dimen/icon_margin"
        app:layout_constraintTop_toTopOf="@id/camera_preview"
        app:layout_constraintBottom_toBottomOf="@id/camera_preview"
        app:layout_constraintEnd_toEndOf="@id/camera_preview" />

    <TextView android:text="@string/processing_fps_label"
        android:id="@+id/tv_processingFpsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/tv_processingFps"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_calibrationLabel"/>

    <TextView android:text="@string/processing_fps"
        android:id="@+id/tv_processingFps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="visible"
        android:layout_marginTop="@dimen/icon_margin"
        android:layout_marginEnd="@dimen/icon_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_processingFpsLabel"
        app:layout_constraintEnd_toEndOf="@id/camera_preview"/>

    <TextView android:text="@string/gpu_usage_label"
        android:id="@+id/tv_gpuUsageLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="visible"
        app:layout_constraintEnd_toStartOf="@id/tv_gpuUsage"
        app:layout_constraintTop_toBottomOf="@id/tv_processingFps"/>

    <TextView android:text="@string/gpu_usage"
        android:id="@+id/tv_gpuUsage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        android:visibility="visible"
        android:layout_marginTop="@dimen/icon_margin"
        android:layout_marginEnd="@dimen/icon_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/tv_gpuUsageLabel"
        app:layout_constraintEnd_toEndOf="@id/camera_preview" />

    <TextView android:text="@string/demo_label"
        android:id="@+id/tv_demoLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/icon_margin"
        android:layout_marginEnd="@dimen/icon_margin"
        android:textColor="@color/label"
        android:textSize="@dimen/label_text_size"
        android:shadowColor="@color/shadow_color"
        android:shadowRadius="@dimen/shadow_radius"
        app:layout_constraintBottom_toBottomOf="@id/fl_main"
        app:layout_constraintEnd_toEndOf="@id/camera_preview"/>

    <com.intellivision.adas.demo.ui.OverlayView
        android:id="@+id/iv_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@id/camera_preview"
        app:layout_constraintEnd_toEndOf="@id/camera_preview"
        app:layout_constraintStart_toStartOf="@id/camera_preview"
        app:layout_constraintTop_toTopOf="@id/camera_preview" />

</android.support.constraint.ConstraintLayout>
